<package>
  <name>rtt_control_state_msgs</name>
  <version>0.1.0</version>
  <description>This package contains the typekit generation for control_state_msgs</description>
  <maintainer email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</maintainer>

  <license>BSD</license>

  <url type="website"></url>

  <author email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rtt</build_depend>
  <build_depend>rtt_roscomm</build_depend>
  <build_depend>control_state_msgs</build_depend>
  <build_depend>orogen</build_depend>
  <build_depend>rtt_actionlib_msgs</build_depend>
  <run_depend>rtt_actionlib_msgs</run_depend>
  <run_depend>rtt</run_depend>
  <run_depend>rtt_roscomm</run_depend>
  <run_depend>control_state_msgs</run_depend>
  <run_depend>rtt_actionlib_msgs</run_depend>

  <export>
    <plugin_depend>rtt_actionlib_msgs</plugin_depend>
  </export>
</package>
